new proj/src/objects/GE_HQ_Acc_Plan_Cont_Role__c.object
<CustomObject>
    <fields>
        <fullName>GE_HQ_Acc_Name__c</fullName>
        <formula>GE_HQ_Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>GE_HQ_Account_Plan__c</referenceTo>
        <relationshipName>Acc_Plan_Contact_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Cont_Role_FL__c</fullName>
        <formula>HYPERLINK( &quot;/&quot;&amp;Id , TEXT(GE_HQ_Cont_Role__c) , &apos;_parent&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Cont_Role__c</fullName>
        <label>Contact Role</label>
        <picklist>
            <picklistValues>
                <fullName>Chief Executive Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Financial Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Operating Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Chief Executive Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managing Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vice President</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Account_Plan_Contact_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Pln_Develop__c</fullName>
        <label>Plan to Develop</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Prod_Influe__c</fullName>
        <label>Product Influence</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Relationship__c</fullName>
        <label>Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strong</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Relationship</label>
    <nameField>
        <displayFormat>CRN-{000000}</displayFormat>
        <label>Relationship</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>